dimagi-SalesforceFB/src/objects/Accounting_BillingAccount__c.object
<CustomObject>
    <fields>
        <fullName>BillingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillingContact</label>
        <referenceTo>Accounting_BillingContactInfo__c</referenceTo>
        <relationshipLabel>Accounting BillingAccount</relationshipLabel>
        <relationshipName>Accounting_BillingAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>account_type__c</fullName>
        <defaultValue>&quot;CONTRACT&quot;</defaultValue>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_by__c</fullName>
        <label>created_by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_by_domain__c</fullName>
        <label>created_by_domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_confirmed_extra_charges__c</fullName>
        <label>date_confirmed_extra_charges</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dimagi_contact__c</fullName>
        <label>Dimagi Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entry_point__c</fullName>
        <label>Entry Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_auto_invoiceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_auto_invoiceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_payment_method__c</fullName>
        <label>Last payment method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pre_or_post_pay__c</fullName>
        <label>Pre or post pay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesforce_account_id__c</fullName>
        <label>Salesforce Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting BillingAccount</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounting BillingAccount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>